[refactor] - Estandarizando cuerpo de las respuestas y formateando el codigo